--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
             <div class="navegacion">
                 <button id="anterior" disabled>&larr;</button>
                 <button id="siguiente">&rarr;</button>
+                <button id="inicio"><b>Inicio</b></button>
             </div>
-            <p>&copy; 2024 UCSC. Inteligencia Artificial. Todos los derechos reservados.</p>
+            <p>&copy; 2024 UCSC. Inteligencia Artificial. Desarrollado por: J.A.D.B, D.I.B.R, B.A.S.F. Todos los derechos reservados.</p>
         </div>
     </footer>
 
